# XFITSSFIX - X-Fi Titanium Streaming Sound Fix
# Copyright (c) 2022 Boris I. Bendovsky (bibendovsky@hotmail.com) and Contributors
# SPDX-License-Identifier: MIT

cmake_minimum_required(VERSION 3.15.7 FATAL_ERROR)
project(xfitssfix_solution VERSION 1.0.0 LANGUAGES NONE)

add_subdirectory(src/sys)
add_subdirectory(src/wrapper)
